fixed format and spacing

--- a/src/components/ProjectsList/projectsList.scss
+++ b/src/components/ProjectsList/projectsList.scss
@@ -56,18 +56,20 @@
       }
 
       h1 {
-        font-size: 60px;
+        font-size: 40px;
         margin: 10px 0;
 
         @include mobile {
-          font-size: 40px;
+          font-size: 30px;
+          marginTop: 15px;
+          margin-bottom: 35px;
         }
       }
       h2 {
-        font-size: 35px;
+        font-size: 25px;
       }
       h4 {
-        font-size: 20px;
+        font-size: 16px;
         color:rgb(37, 54, 46);
 
         @include mobile {
